--- a/themes/tundra/Dialog.css
+++ b/themes/tundra/Dialog.css
@@ -110,7 +110,7 @@
 	height:14px;
 }
 
-.dj_ie6 .tundra .dijitTooltipBelow .dijitTooltipConnector {
+.dj_ie .tundra .dijitTooltipBelow .dijitTooltipConnector {
 	/* use gif for IE7 too, due to png rendering problems on fade-in (see http://trac.dojotoolkit.org/ticket/6555) */
 	background-image: url("images/tooltipConnectorUp.gif");
 }
@@ -123,7 +123,7 @@
 	width:16px;
 	height:14px;
 }
-.dj_ie6 .tundra .dijitTooltipAbove .dijitTooltipConnector {
+.dj_ie .tundra .dijitTooltipAbove .dijitTooltipConnector {
 	background-image: url("images/tooltipConnectorDown.gif");
 }
 .dj_ie6 .tundra .dijitTooltipAbove .dijitTooltipConnector {
@@ -144,7 +144,7 @@
 	width:16px;
 	height:14px;
 }
-.dj_ie6 .tundra .dijitTooltipLeft .dijitTooltipConnector {
+.dj_ie .tundra .dijitTooltipLeft .dijitTooltipConnector {
 	background-image: url("images/tooltipConnectorRight.gif");
 }
 
@@ -159,7 +159,7 @@
 	width:16px;
 	height:14px;
 }
-.dj_ie6 .tundra .dijitTooltipRight .dijitTooltipConnector {
+.dj_ie .tundra .dijitTooltipRight .dijitTooltipConnector {
 	background-image: url("images/tooltipConnectorLeft.gif");
 }
 
